--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
@@ -7,16 +7,14 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/AdminLTE/bootstrap/css/bootstrap.css">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="~/Content/AdminLTE/font-awesome.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/ionicons.min.css">
-
 
     <!-- Theme style -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/AdminLTE.css">
+
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/skins/_all-skins.min.css">
@@ -82,6 +80,7 @@
                 <ul class="sidebar-menu">
                     <li class="header">功能</li>
                     <li><a href="/"><i class="fa fa-dashboard"></i><span>控制面板</span></a></li>
+                    <li><a href="/SysManager"><i class="fa fa-user"></i><span>系统用户管理</span></a></li>
                 </ul>
             </section>
             <!-- /.sidebar -->
