--- a/code/JIF.CMS/JIF.CMS.Management/Content/AdminLTE/bootstrap/css/bootstrap.css
+++ b/code/JIF.CMS/JIF.CMS.Management/Content/AdminLTE/bootstrap/css/bootstrap.css
@@ -2287,7 +2287,8 @@ th {
 .table > caption + thead > tr:first-child > td,
 .table > colgroup + thead > tr:first-child > td,
 .table > thead:first-child > tr:first-child > td {
-  border-top: 0;
+    /*background-color:#ddd;*/
+    background-color:rgb(234, 237, 239);
 }
 .table > tbody + tbody {
   border-top: 2px solid #ddd;
@@ -2322,7 +2323,7 @@ th {
   background-color: #f9f9f9;
 }
 .table-hover > tbody > tr:hover {
-  background-color: #f5f5f5;
+  background-color: #edf0f3;
 }
 table col[class*="col-"] {
   position: static;
@@ -6757,4 +6758,3 @@ button.close {
     display: none !important;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map */
