updat MVC Bunldes

--- a/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
@@ -13,7 +13,7 @@
                     <div class="input-group col-md-3">
                         <input type="text" class="form-control" name="s" placeholder="账号 / Email / 电话" value="@ViewBag.SearchKey">
                         <span class="input-group-btn">
-                            <button type="submit" class="btn btn-info">搜 索</button>
+                            <button type="submit" class="btn btn-info btn-flat">搜 索</button>
                         </span>
                     </div>
                 </form>
