--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
@@ -6,40 +6,13 @@
     <title>控制中心 - @ViewBag.Title</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/bootstrap/css/bootstrap.css">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/font-awesome.min.css">
+    @Styles.Render("~/styles/adminlte")
 
-    <!-- Theme style -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/AdminLTE.css">
-
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-         folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/skins/_all-skins.min.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <!-- iCheck for checkboxes and radio inputs -->
-    <link href="~/Content/AdminLTE/plugins/iCheck/all.css" rel="stylesheet" />
-
-    <!-- jquery-confirm -->
-    <link href="~/Content/jquery-confirm/jquery-confirm.min.css" rel="stylesheet" />
-
-    <!-- ios-switch -->
-    <link href="~/Content/ios-switch/switch.css" rel="stylesheet" />
-
-    <!-- custom styles -->
     @RenderSection("Styles", false)
-
-
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
-    <!-- Site wrapper -->
+
     <div class="wrapper">
         <header class="main-header">
             <!-- Logo -->
@@ -101,33 +74,12 @@
         <!-- /.content-wrapper -->
     </div>
 
-
     @if (TempData["JIFExceptionMessage"] != null)
     {
         <div id="JIFExceptionMessage" style="display:none">@TempData["JIFExceptionMessage"]</div>
     }
+    @Scripts.Render("~/scripts/adminlte")
 
-    <!-- ./wrapper -->
-    <!-- jQuery 2.2.3 -->
-    <script src="~/Content/AdminLTE/plugins/jQuery/jquery-2.2.3.min.js"></script>
-    <!-- Bootstrap 3.3.6 -->
-    <script src="~/Content/AdminLTE/bootstrap/js/bootstrap.min.js"></script>
-    <!-- SlimScroll -->
-    <script src="~/Content/AdminLTE/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-    <!-- iCheck 1.0.1 -->
-    <script src="~/Content/AdminLTE/plugins/iCheck/icheck.min.js"></script>
-
-    <!-- jquery-confirm -->
-    <script src="~/Content/jquery-confirm/jquery-confirm.min.js"></script>
-
-    <!-- ios-switch -->
-    <script src="~/Content/ios-switch/switch.js"></script>
-
-    <!-- AdminLTE App -->
-    <script src="~/Content/AdminLTE/dist/js/app.min.js"></script>
-
-    <!-- Layout Js -->
-    <script src="~/Scripts/Layout.js"></script>
     @RenderSection("Scripts", false)
 </body>
 </html>
