--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
@@ -39,15 +39,7 @@
             <!-- sidebar: style can be found in sidebar.less -->
             <section class="sidebar">
                 <!-- Sidebar user panel -->
-                <div class="user-panel">
-                    <div class="pull-left image">
-                        <img src="~/Content/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                    </div>
-                    <div class="pull-left info">
-                        <p style="margin-bottom: 6px; font-weight:normal;">超级管理员</p>
-                        <a class="btn btn-xs btn-warning" style="margin-top:0px;">退出系统</a>
-                    </div>
-                </div>
+                @Html.Action("CurrentUserInfo", "Home", new { viewpath = "~/Views/shared/_CurrentUserInfo.cshtml" })
                 <!-- /.search form -->
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu">
