--- a/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Detail.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Detail.cshtml
@@ -64,18 +64,9 @@
                     </form>
                 </div>
 
-                <div class="tab-pane" id="pwd">
+                <div id="pwd" class="tab-pane">
                     <form class="form-horizontal" action="/sysmanager/updatepwd/@manager.Id" method="post">
                         <div class="box-body">
-
-                            <div class="form-group">
-                                <label for="inputoriginalPwd" class="col-sm-2 control-label">原始密码</label>
-
-                                <div class="col-sm-8">
-                                    <input type="password" class="form-control" id="inputoriginalPwd" name="originalPwd" placeholder="登录密码" required>
-                                </div>
-                            </div>
-
                             <div class="form-group">
                                 <label for="inputnewPwd" class="col-sm-2 control-label">新密码</label>
 
