--- a/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
@@ -11,25 +11,27 @@
             <div class="box-header with-border">
                 <a href="/sysmanager/add" class="btn btn-success">新 增</a>
 
-                <form action="/SysManager/" method="get" class="form-horizontal">
-                    <div class="input-group col-lg-3 col-sm-5">
-                        <input type="text" class="form-control" name="s" placeholder="账号 / Email / 电话" value="@ViewBag.SearchKey">
-                        <span class="input-group-btn">
-                            <button type="submit" class="btn btn-info btn-flat">搜 索</button>
-                        </span>
-                    </div>
-                </form>
+                <div class="pull-right">
+                    <form action="/SysManager/" method="get" class="form-horizontal" style="max-width: 300px;">
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="s" placeholder="账号 / Email / 电话" value="@ViewBag.SearchKey">
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-info btn-flat">搜 索</button>
+                            </span>
+                        </div>
+                    </form>
+                </div>
             </div>
 
             <div class="box-body">
                 <table class="table table-bordered table-hover table-condensed table-striped">
                     <thead>
                         <tr>
-                            <th style="width: 50px;">编号</th>
                             <th>账号</th>
                             <th>邮箱</th>
                             <th>电话</th>
                             <th>启用</th>
+                            <th>创建者</th>
                             <th>创建时间</th>
                             <th>操作</th>
                         </tr>
@@ -38,11 +40,11 @@
                         @foreach (var manager in managers)
                         {
                             <tr class="no-padding">
-                                <td>@manager.Id</td>
                                 <td>@manager.Account</td>
                                 <td>@manager.Email</td>
                                 <td>@manager.CellPhone</td>
                                 <td><span class="label @(manager.Enable ? "label-success" :"label-danger")">@(manager.Enable ? "启用" : "停用")</span></td>
+                                <td>chenning</td>
                                 <td>@manager.CreateTime.ToString(JIF.CMS.Core.JIFConsts.DATETIME_NORMAL)</td>
                                 <td>
                                     <a href="/sysmanager/detail/@manager.Id" class="btn btn-xs btn-primary no-margin">详情</a>
