1.updater 加密帮助类 2.系统管理员页面开发

--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
@@ -73,5 +73,7 @@
     @Scripts.Render("~/scripts/adminlte")
 
     @RenderSection("Scripts", false)
+
+    @StackExchange.Profiling.MiniProfiler.RenderIncludes()
 </body>
 </html>
