--- a/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Add.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Add.cshtml
@@ -53,7 +53,7 @@
                         <label for="inputPhone" class="col-sm-2 control-label">手机号码</label>
 
                         <div class="col-sm-8">
-                            <input type="password" class="form-control" id="inputPhone" name="CellPhone" placeholder="">
+                            <input type="text" class="form-control" id="inputPhone" name="CellPhone" placeholder="">
                         </div>
                     </div>
 
