add JIF.CMS.Management.API Project

--- a/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Add.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Add.cshtml
@@ -74,6 +74,50 @@
                 </div>
             </div>
         </form>
+
+
+        <form action="/sysmanager/ddd" method="post">
+
+            <div>
+                <input type="text" name="[0].Id" value="11" />
+
+
+                <div>
+                    <input type="text" name="[0].KV[0].k" />
+                    <input type="text" name="[0].KV[0].v" />
+                </div>
+
+                <div>
+                    <input type="text" name="[0].KV[1].k" />
+                    <input type="text" name="[0].KV[1].v" />
+                </div>
+                <div>
+                    <input type="text" name="[0].KV[2].k" />
+                    <input type="text" name="[0].KV[2].v" />
+                </div>
+            </div>
+            <div>
+                <input type="text" name="[1].Id" value="11" />
+
+
+                <div>
+                    <input type="text" name="[1].KV[0].k" />
+                    <input type="text" name="[1].KV[0].v" />
+                </div>
+
+                <div>
+                    <input type="text" name="[1].KV[1].k" />
+                    <input type="text" name="[1].KV[1].v" />
+                </div>
+                <div>
+                    <input type="text" name="[1].KV[2].k" />
+                    <input type="text" name="[1].KV[2].v" />
+                </div>
+            </div>
+
+            <input type="submit" name="name" value="提交" />
+
+        </form>
     </div>
 </div>
 
