--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Pager.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Pager.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Linq;
-@model JIF.CMS.Core.IPaged
+@model IPaged
 
 @{
     var _pagenums = new List<int>();                    // 页码数字
