--- a/code/JIF.CMS/JIF.CMS.Management/Content/AdminLTE/bootstrap/bootstrap.css
+++ b/code/JIF.CMS/JIF.CMS.Management/Content/AdminLTE/bootstrap/bootstrap.css
@@ -334,8 +334,8 @@ html {
 }
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-family: "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+    font-size: 12px;
     line-height: 1.42857143;
     color: #333;
     background-color: #fff;
@@ -1835,7 +1835,7 @@ th {
     .table > tfoot > tr > td {
         padding: 8px;
         line-height: 1.42857143;
-        vertical-align: top;
+        /*vertical-align: top;*/
         border-top: 1px solid #ddd;
     }
 
