--- a/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "系统用户管理";
 
-    var managers = ViewBag.Managers as IList<JIF.CMS.Services.SysManager.Dtos.SysAdminSearchListOutDto>;
+    var managers = ViewBag.Managers as IPagedList<JIF.CMS.Services.SysManager.Dtos.SysAdminSearchListOutDto>;
 }
 
 <div class="row">
@@ -32,10 +32,10 @@
                                 <th>账号</th>
                                 <th>邮箱</th>
                                 <th>电话</th>
-                                <th>启用</th>
                                 <th>创建者</th>
-                                <th>创建时间</th>
-                                <th>操作</th>
+                                <th style="width:50px;">启用</th>
+                                <th style="width:80px;">创建时间</th>
+                                <th style="width:50px;">操作</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -45,9 +45,9 @@
                                     <td>@manager.Account</td>
                                     <td>@manager.Email</td>
                                     <td>@manager.CellPhone</td>
-                                    <td><span class="label @(manager.Enable ? "label-success" : "label-danger")">@(manager.Enable ? "启用" : "停用")</span></td>
                                     <td>@manager.CreateUserName</td>
-                                    <td>@manager.CreateTime.ToString(JIF.CMS.Core.JIFConsts.DATETIME_NORMAL)</td>
+                                    <td><span class="label @(manager.Enable ? "label-success" : "label-danger")">@(manager.Enable ? "启用" : "停用")</span></td>
+                                    <td>@manager.CreateTime.ToString(JIFConsts.DATETIME_DATE)</td>
                                     <td>
                                         <a href="/sysmanager/detail/@manager.Id" class="btn btn-xs btn-primary no-margin">详情</a>
                                     </td>
