--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
@@ -46,6 +46,8 @@
                     <li class="header">功能</li>
                     <li><a href="/"><i class="fa fa-dashboard"></i><span>控制面板</span></a></li>
                     <li><a href="/SysManager"><i class="fa fa-user"></i><span>系统用户管理</span></a></li>
+                    <li><a href="/Attachment"><i class="fa fa-folder-o"></i><span>附件管理</span></a></li>
+
                 </ul>
             </section>
             <!-- /.sidebar -->
