--- a/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
@@ -21,10 +21,27 @@
     </div>
 </div>
 
+<script id="dt-upload-item" type="text/x-dot-template">
+    <div id="{{=it.id}}" class="item">
+        <h4 class="info">{{=it.name }}</h4>
+        <div class="progress active">
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                <span class="sr-only state">等待上传 <i>60%</i></span>
+            </div>
+        </div>
+    </div>
+</script>
+
+
 
 @section Scripts {
+
+
+
     <script src="~/Content/webuploader-0.1.5/webuploader.js"></script>
+    <script src="~/Content/doT/doT.min.js"></script>
     <script src="~/js/attachment.js"></script>
+
     <script type="text/javascript">
         $(function () {
             attachmentUpload.init();
