--- a/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
@@ -21,11 +21,15 @@
     </div>
 </div>
 
+@{
+    var wc = JIF.CMS.Core.Infrastructure.EngineContext.Current.Resolve<IWorkContext>();
+}
+
 <script id="dt-upload-item" type="text/x-dot-template">
     <div id="{{=it.id}}" class="item">
         <h4 class="info">{{=it.name }}</h4>
-        <div class="progress active">
-            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+        <div class="progress progress-xxs active">
+            <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                 <span class="sr-only state">等待上传 <i>60%</i></span>
             </div>
         </div>
@@ -43,6 +47,8 @@
     <script src="~/js/attachment.js"></script>
 
     <script type="text/javascript">
+        var cuid = @wc.CurrentUser.Id;
+
         $(function () {
             attachmentUpload.init();
         })
