--- a/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
@@ -1,13 +1,28 @@
-﻿
-<div class="row">
-    <div class="col-md-10">
+﻿@{
+    ViewBag.Title = "附件管理";
+}
 
+<div class="row">
+    <div class="col-md-12">
         <div class="box box-primary">
             <div class="box-header with-border">
-                附件管理
+                <a href="" class="btn btn-success">上 传</a>
+
+                <div class="pull-right">
+                    <form action="/attachment" method="get" class="form-horizontal" style="max-width: 300px;">
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="s" placeholder="文件名称" value="@ViewBag.SearchWords">
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-info btn-flat">搜 索</button>
+                            </span>
+                        </div>
+                    </form>
+                </div>
             </div>
 
             <div class="box-body">
+
+
                 <div id="uploader" class="wu-example">
                     <!--用来存放文件信息-->
                     <div id="thelist" class="uploader-list"></div>
@@ -16,9 +31,80 @@
                         <button class="btn btn-default upload-btn">开始上传</button>
                     </div>
                 </div>
+
+
+                <table class="table table-bordered table-hover table-striped" style="display:none;">
+                    <thead>
+                        <tr>
+                            <th style="width: 10px"><input type="checkbox" class="minimal"></th>
+                            <th>文件名</th>
+                            <th style="width:100px;">大小</thstyle="width:100px;">
+                            <th style="width: 120px">修改日期</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (int i = 0; i < 20; i++)
+                        {
+                            <tr>
+                                <td>
+                                    <input type="checkbox" class="minimal">
+                                </td>
+                                <td>VisualStudio2017_ProductLaunchPoster-1.png</td>
+                                <td>
+                                    15.1 MB
+                                </td>
+                                <td>@DateTime.Now.ToString("yyyy-MM-dd HH:mm")</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+</div>
+
+<div class="uploader-panel">
+
+    <div class="box box-primary">
+        <div class="box-header with-border">
+            <h3 class="box-title">正在上传 (0/5)</h3>
+
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+            </div>
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body" style="display: block;">
+            <ul class="products-list product-list-in-box">
+                <li class="item">
+                    <div class="product-img">
+                        <img src="dist/img/default-50x50.gif" alt="Product Image">
+                    </div>
+                    <div class="product-info">
+                        <a href="javascript:void(0)" class="product-title">
+                            Samsung TV
+                            <span class="label label-warning pull-right">$1800</span>
+                        </a>
+                        <span class="product-description">
+                            Samsung 32" 1080p 60Hz LED Smart HDTV.
+                        </span>
+                    </div>
+                </li>
+                <!-- /.item -->
+
+            </ul>
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer text-center" style="display: block;">
+            <a href="javascript:void(0)" class="uppercase">View All Products</a>
+        </div>
+        <!-- /.box-footer -->
+    </div>
+
+
 </div>
 
 @{
@@ -37,10 +123,7 @@
 </script>
 
 
-
 @section Scripts {
-
-
 
     <script src="~/Content/webuploader-0.1.5/webuploader.js"></script>
     <script src="~/Content/doT/doT.min.js"></script>
@@ -58,4 +141,22 @@
 
 @section Styles {
     <link href="~/Content/webuploader-0.1.5/webuploader.css" rel="stylesheet" />
+
+    <style type="text/css">
+        .uploader-panel {
+            display: none;
+            position: absolute;
+            width: 633px;
+            bottom: 5px;
+            right: 15px;
+            border-top-left-radius: 7px;
+            border-top-right-radius: 7px;
+            border: 1px solid #e2e2e2;
+            box-shadow: 0 0 10px #ccc;
+        }
+
+            .uploader-panel .box {
+                margin-bottom: 0px;
+            }
+    </style>
 }
