--- a/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
@@ -25,7 +25,7 @@
 
                 <div id="uploader" class="wu-example">
                     <!--用来存放文件信息-->
-                    <div id="thelist" class="uploader-list"></div>
+                    <div id="uploader-list"></div>
                     <div class="btns">
                         <div id="picker">选择文件</div>
                         <button class="btn btn-default upload-btn">开始上传</button>
@@ -45,66 +45,23 @@
                     <tbody>
                         @for (int i = 0; i < 20; i++)
                         {
-                            <tr>
-                                <td>
-                                    <input type="checkbox" class="minimal">
-                                </td>
-                                <td>VisualStudio2017_ProductLaunchPoster-1.png</td>
-                                <td>
-                                    15.1 MB
-                                </td>
-                                <td>@DateTime.Now.ToString("yyyy-MM-dd HH:mm")</td>
-                            </tr>
+                        <tr>
+                            <td>
+                                <input type="checkbox" class="minimal">
+                            </td>
+                            <td>VisualStudio2017_ProductLaunchPoster-1.png</td>
+                            <td>
+                                15.1 MB
+                            </td>
+                            <td>@DateTime.Now.ToString("yyyy-MM-dd HH:mm")</td>
+                        </tr>
                         }
                     </tbody>
                 </table>
+
             </div>
         </div>
     </div>
-</div>
-
-<div class="uploader-panel">
-
-    <div class="box box-primary">
-        <div class="box-header with-border">
-            <h3 class="box-title">正在上传 (0/5)</h3>
-
-            <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                    <i class="fa fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-            </div>
-        </div>
-        <!-- /.box-header -->
-        <div class="box-body" style="display: block;">
-            <ul class="products-list product-list-in-box">
-                <li class="item">
-                    <div class="product-img">
-                        <img src="dist/img/default-50x50.gif" alt="Product Image">
-                    </div>
-                    <div class="product-info">
-                        <a href="javascript:void(0)" class="product-title">
-                            Samsung TV
-                            <span class="label label-warning pull-right">$1800</span>
-                        </a>
-                        <span class="product-description">
-                            Samsung 32" 1080p 60Hz LED Smart HDTV.
-                        </span>
-                    </div>
-                </li>
-                <!-- /.item -->
-
-            </ul>
-        </div>
-        <!-- /.box-body -->
-        <div class="box-footer text-center" style="display: block;">
-            <a href="javascript:void(0)" class="uppercase">View All Products</a>
-        </div>
-        <!-- /.box-footer -->
-    </div>
-
-
 </div>
 
 @{
@@ -114,7 +71,7 @@
 <script id="dt-upload-item" type="text/x-dot-template">
     <div id="{{=it.id}}" class="item">
         <h4 class="info">{{=it.name }}</h4>
-        <div class="progress progress-xxs active">
+        <div class="progress active">
             <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                 <span class="sr-only state">等待上传 <i>60%</i></span>
             </div>
@@ -141,22 +98,4 @@
 
 @section Styles {
     <link href="~/Content/webuploader-0.1.5/webuploader.css" rel="stylesheet" />
-
-    <style type="text/css">
-        .uploader-panel {
-            display: none;
-            position: absolute;
-            width: 633px;
-            bottom: 5px;
-            right: 15px;
-            border-top-left-radius: 7px;
-            border-top-right-radius: 7px;
-            border: 1px solid #e2e2e2;
-            box-shadow: 0 0 10px #ccc;
-        }
-
-            .uploader-panel .box {
-                margin-bottom: 0px;
-            }
-    </style>
 }
