--- a/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
@@ -38,7 +38,7 @@
                         <tr>
                             <th style="width: 10px"><input type="checkbox" class="minimal"></th>
                             <th>文件名</th>
-                            <th style="width:100px;">大小</thstyle="width:100px;">
+                            <th style="width:100px;">大小</th>
                             <th style="width: 120px">修改日期</th>
                         </tr>
                     </thead>
@@ -64,21 +64,16 @@
     </div>
 </div>
 
-@{
-    var wc = JIF.CMS.Core.Infrastructure.EngineContext.Current.Resolve<IWorkContext>();
-}
-
 <script id="dt-upload-item" type="text/x-dot-template">
     <div id="{{=it.id}}" class="item">
         <h4 class="info">{{=it.name }}</h4>
         <div class="progress active">
-            <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+            <div class="progress-bar progress-xs progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                 <span class="sr-only state">等待上传 <i>60%</i></span>
             </div>
         </div>
     </div>
 </script>
-
 
 @section Scripts {
 
@@ -87,11 +82,10 @@
     <script src="~/js/attachment.js"></script>
 
     <script type="text/javascript">
-        var cuid = @wc.CurrentUser.Id;
-
         $(function () {
             attachmentUpload.init();
-        })
+        });
+
     </script>
 }
 
