$ deferred & promise Study

--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
@@ -45,8 +45,9 @@
                 <ul class="sidebar-menu">
                     <li class="header">功能</li>
                     <li><a href="/"><i class="fa fa-dashboard"></i><span>控制面板</span></a></li>
-                    <li><a href="/SysManager"><i class="fa fa-user"></i><span>系统用户管理</span></a></li>
-                    <li><a href="/Attachment"><i class="fa fa-folder"></i><span>附件管理</span></a></li>
+                    <li><a href="/sysmanager"><i class="fa fa-user"></i><span>系统用户管理</span></a></li>
+                    <li><a href="/article"><i class="fa fa-book"></i><span>文章管理</span></a></li>
+                    <li><a href="/attachment"><i class="fa fa-folder"></i><span>附件管理</span></a></li>
 
                 </ul>
             </section>
@@ -72,6 +73,7 @@
     {
         <div id="JIFExceptionMessage" style="display:none">@TempData["JIFExceptionMessage"]</div>
     }
+
     @Scripts.Render("~/scripts/adminlte")
 
     <script type="text/javascript">
