--- a/code/JIF.CMS/JIF.CMS.Management/Content/AdminLTE/bootstrap/bootstrap.css
+++ b/code/JIF.CMS/JIF.CMS.Management/Content/AdminLTE/bootstrap/bootstrap.css
@@ -4868,13 +4868,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     display: inline;
     padding: .2em .6em .3em;
     font-size: 75%;
-    font-weight: bold;
     line-height: 1;
     color: #fff;
     text-align: center;
     white-space: nowrap;
     vertical-align: baseline;
-    border-radius: .25em;
+    border-radius: 2px;
 }
 
 a.label:hover,
