--- a/code/JIF.CMS/JIF.CMS.Management/Views/Article/Detail.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Article/Detail.cshtml
@@ -22,17 +22,12 @@
     <div class="col-md-4">
         <div class="box box-primary">
             <div class="box-body">
-
-                <div class="form-group">
-                    <label for="inp-pub-date">发布日期</label>
-                    <input type="text" class="form-control datepicker" id="inp-pub-date" placeholder="发布日期" value="@article.CreateTime.ToString(JIFConsts.DATETIME_DATE)">
-                </div>
                 <div class="form-group">
                     <label>所属分类</label>
-                    <select class="form-control">
+                    <select class="form-control" id="inp-category">
                         @foreach (var cate in Model.Categories)
                         {
-                            <option value="@cate.Id">@cate.Name</option>
+                            <option value="@cate.Id" @(article.CategoryId == cate.Id ? "selected=\"selected\"" : "")>@cate.Name</option>
                         }
                     </select>
                 </div>
@@ -40,21 +35,20 @@
                     <input type="checkbox" class="minimal" id="inp-allow-comments" @(article.AllowComments ? "checked" : "")>
                     <label for="inp-allow-comments">允许评论</label>
                     &nbsp;
-                    <input type="checkbox" class="minimal" id="inp-pub" @(article.Status == JIF.CMS.Core.Domain.ArticleStatus.Pub ? "checked" : "")>
+                    <input type="checkbox" class="minimal" id="inp-pub" @(article.IsPublished ? "checked" : "")>
                     <label for="inp-pub">是否发布</label>
                 </div>
 
             </div>
 
             <div class="box-footer">
-                <button type="submit" class="btn btn-success">保 存</button>
+                <button id="btn-save" type="submit" class="btn btn-success">保 存</button>
             </div>
         </div>
     </div>
-
 </div>
 
-
+<input type="hidden" id="inp-id" value="@article.Id" />
 
 @section Scripts{
     @Scripts.Render("~/scripts/editor.md", "~/scripts/bootstrap-datepicker", "~/scripts/page/article")
