--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_Layout.cshtml
@@ -47,8 +47,9 @@
                     <li><a href="/"><i class="fa fa-dashboard"></i><span>控制面板</span></a></li>
                     <li><a href="/sysmanager"><i class="fa fa-user"></i><span>系统用户管理</span></a></li>
                     <li><a href="/article"><i class="fa fa-book"></i><span>文章管理</span></a></li>
+                    <li><a href="/article/categories"><i class="fa fa-book"></i><span>分类管理</span></a></li>
+                    <li><a href="/article/tags"><i class="fa fa-book"></i><span>标签管理</span></a></li>
                     <li><a href="/attachment"><i class="fa fa-folder"></i><span>附件管理</span></a></li>
-
                 </ul>
             </section>
             <!-- /.sidebar -->
